tests/baselines/reference/parseCommaSeperatedNewlineNew.errors.txt
tests/cases/compiler/parseCommaSeperatedNewlineNew.ts(1,2): error TS2304: Cannot find name 'a'.
tests/cases/compiler/parseCommaSeperatedNewlineNew.ts(2,4): error TS1109: Expression expected.


==== tests/cases/compiler/parseCommaSeperatedNewlineNew.ts (2 errors) ====
    (a,
     ~
!!! error TS2304: Cannot find name 'a'.
    new)
       ~
!!! error TS1109: Expression expected.